--- a/templates/index.html
+++ b/templates/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Sign-Up/Login Form</title>
+
     <link href='/static/css/google-font.css' rel='stylesheet' type='text/css'>
+
     <link rel="stylesheet" href="/static/css/normalize.min.css">
 
-
     <link rel="stylesheet" href="/static/css/style.css">
-
 
 </head>
 
@@ -94,6 +94,8 @@
 <script src="/static/js/jquery.min.js"></script>
 
 <script src="/static/js/index.js"></script>
+
+<script src="/static/bootstrap/js/bootstrap.min.js"></script>
 
 <script type="text/javascript">
 			var password = document.getElementById("password")
