--- a/templates/home.html
+++ b/templates/home.html
@@ -94,6 +94,12 @@
                         <div class="form-group">
                             <button id="btnSubmitFile" type="submit" class="btn btn-primary pull-center">Submit</button>
                         </div>
+                        <div class="form-group">
+                        {% if name %}
+                        <p class="text-danger">{{ name }}</p>
+                        {% endif %}
+
+                    </div>
                     </form>
                     <script>
                         function bs_input_file() {
@@ -110,7 +116,6 @@
                                         });
                                         $(this).find('input').css("cursor","pointer");
                                         $(this).find('input').mousedown(function() {
-                                            $(this).parents('.input-file').prev().click();
                                             return false;
                                         });
                                         return element;
@@ -154,57 +159,35 @@
                                 <fieldset>
                                     <legend style="color:blue;font-weight:bold;">Predict</legend>
                                     <div class="col-sm-12" style="width: 500px; height:250px; overflow:scroll;">
-                                        <form class="form-horizontal">
-                                            <div class="form-group">
-                                                <label class="control-label col-sm-3">Param 1:</label>
+                                        <form class="form-horizontal" id="form_predict">
+                                           <!--  <div class="form-group">
+                                                <label class="control-label col-sm-3" id="param1"></label>
                                                 <div class="col-sm-1"></div>
                                                 <div class="col-sm-8">
                                                     <input type="email" class="form-control"
                                                     placeholder="Enter param 1">
                                                 </div>
-                                            </div>
-                                            <div class="form-group">
-                                                <label class="control-label col-sm-3">Param 2:</label>
-                                                <div class="col-sm-1"></div>
-                                                <div class="col-sm-8">
-                                                    <input type="email" class="form-control"
-                                                    placeholder="Enter param 2">
-                                                </div>
-                                            </div>
-                                            <div class="form-group">
-                                                <label class="control-label col-sm-3">Param 3:</label>
-                                                <div class="col-sm-1"></div>
-                                                <div class="col-sm-8">
-                                                    <input type="email" class="form-control"
-                                                    placeholder="Enter param 3">
-                                                </div>
-                                            </div>
-                                            <div class="form-group">
-                                                <label class="control-label col-sm-3">Param 4:</label>
-                                                <div class="col-sm-1"></div>
-                                                <div class="col-sm-8">
-                                                    <input type="email" class="form-control"
-                                                    placeholder="Enter param 4">
-                                                </div>
-                                            </div>
-                                            <div class="form-group">
-                                                <label class="control-label col-sm-3">Param 5:</label>
-                                                <div class="col-sm-1"></div>
-                                                <div class="col-sm-8">
-                                                    <input type="email" class="form-control"
-                                                    placeholder="Enter param 5">
-                                                </div>
-                                            </div>
+                                            </div> -->
+
+
                                         </form>
                                     </div>
                                     <div class="form-group">
                                         <div class="col-sm-offset-5 col-sm-12">
-                                            <button type="submit" class="btn btn-danger">Predict</button>
+                                            <input type="button" class="btn btn-danger" id="predict" value="Predict">
                                         </div>
                                     </div>
                                 </fieldset>
                             </div>
                         </div>
+                        <div class="row bg-primary text-white" style="height:100px; background:#337ab7; margin-top:50px">
+                        <div class="col-sm-3">
+                            <label class="text-light" style="">Kết quả: </label>
+                        </div>
+                        <div class="col-sm-9">
+                            <p class="text-light" id="rs"></p>
+                        </div>
+                    </div>
                     </div>
                 </div>
 
@@ -260,5 +243,6 @@
 {% endblock %}
 
 <script src="/static/js/train.js"></script>
+<script src="/static/js/predict.js"></script>
 </body>
 </html>
